titres pages renommés

--- a/confirmation.html
+++ b/confirmation.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orinoco</title>
+    <title>Orinoco - vente en ligne</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
  
     <script src="main.js"></script>  
+    <script src="confirmation.js"></script>
 </body>
 </html>
