--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orinoco</title>
+    <title>Orinoco - vente en ligne</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+       
+        <div class="container">
+             /*mettre ici un caddie*/
+            <h1> Orinoco - Caméras vintage</h1>
+        </div>
+    </header>
 
   <script src="main.js"></script>  
+  <script type="module" src="liste.js"></script>
 </body>
 </html>
