creation de quatre fichiers.js

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+     
+    <link href="./src/css/style.css" rel="stylesheet">
+
+    <meta name="description" content="Vente de caméras vintage.">
     <title>Orinoco - vente en ligne</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -10,10 +14,31 @@
     <header>
        
         <div class="container">
-             /*mettre ici un caddie*/
-            <h1> Orinoco - Caméras vintage</h1>
+            <a class="navbar-brand" href="index.html"><i class="fas-fa-shopping-cart"></i>Orinoco</a>
         </div>
     </header>
+    <main>
+        <div class="container">
+            <div class="col-md-12 text-center">
+                <h2>Caméras vintage</h2>
+            </div>
+            <div class="col-md 12 text-center" id="liste_article">
+            </div>
+        </div>
+
+    </main>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 text-center">
+                    <a href="#">mentions légales</a>
+                </div>
+                <div class="col-md-4 text-center">
+                    <a href="#">contact</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
   <script src="main.js"></script>  
   <script type="module" src="liste.js"></script>
