--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -17,30 +17,9 @@
             <a class="navbar-brand" href="index.html"><i class="fas-fa-shopping-cart"></i>Orinoco</a>
         </div>
     </header>
-    <main>
-        <div class="container">
-            <div class="col-md-12 text-center">
-                <h2>Caméras vintage</h2>
-            </div>
-            <div class="col-md 12 text-center" id="liste_article">
-            </div>
-        </div>
+    
 
-    </main>
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 text-center">
-                    <a href="#">mentions légales</a>
-                </div>
-                <div class="col-md-4 text-center">
-                    <a href="#">contact</a>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-  <script src="main.js"></script>  
-  <script type="module" src="liste.js"></script>
+  <div id="content"></div>  
+  <script src="index.js"></script>
 </body>
 </html>
