--- a/panier.html
+++ b/panier.html
@@ -2,7 +2,11 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+     
+    <link href="./src/css/style.css" rel="stylesheet">
+
+    <meta name="description" content="Vente de caméras vintage.">
     <title>Orinoco - vente en ligne</title>
     <link rel="stylesheet" href="style.css">
 </head>
