ajout vcam dans fichier html

--- a/panier.html
+++ b/panier.html
@@ -13,6 +13,6 @@
 <body>
  
     <script src="main.js"></script>  
-    <script type="module" src="panier.js"></script>
+    <script src="panier.js"></script>
 </body>
 </html>
