--- a/produit.html
+++ b/produit.html
@@ -11,8 +11,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- 
+    <header>
+
+    </header>
+    <main>
+        
+    </main>
     <script src="main.js"></script>  
-    <script type="module" src="produit.js"></script>
+    <script src="produit.js"></script>
 </body>
 </html>
