--- a/index.html
+++ b/index.html
@@ -11,15 +11,52 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+<header>
        
-        <div class="container">
-            <a class="navbar-brand" href="index.html"><i class="fas-fa-shopping-cart"></i>Orinoco</a>
-        </div>
-    </header>
-    
+    <div class="container">
+        <a class="navbar-brand" href="index.html"><i class="fas-fa-shopping-cart"></i>Orinoco</a>
+    </div>
+</header>
+<main>
+    <div class="container">
+        <h2>caméras vintage</h2>
+            <div class="liste">
+                <ul>
+                    <li>   
+                        <a href="http://localhost:3000/images/vcam_1.jpg">vcam_1</a>
+                    </li>
+                    <li>
+                        <a href="http://localhost:3000/images/vcam_2.jpg">vcam_2</a>
+                    </li>
+                    <li>
+                        <a href="http://localhost:3000/images/vcam_3.jpg">vcam_3</a>
+                    </li>
+                    <li>
+                        <a href="http://localhost:3000/images/vcam_4.jpg">vcam_4</a>
+                    </li>
+                    <li>
+                        <a href="http://localhost:3000/images/vcam_5.jpg">vcam_5</a>
+                    </li>
+                </ul>
+            </div>
+    </div>
 
-  <div id="content"></div>  
-  <script src="index.js"></script>
+</main>
+<footer>
+    <div class="container">
+        <div class="mentions">
+            <a href="#">Mentions légales</a>
+        </div>
+        <div class="conditions">
+            <a href="#">Conditions générales</a>
+        </div>
+        <div class="contact">
+            <a href="#">Contact</a>
+        </div>
+    </div>
+</footer>
+
+    <div id="content"></div>  
+    <script src="index.js"></script>
 </body>
 </html>
