--- a/panier.html
+++ b/panier.html
@@ -11,6 +11,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <a href="index.html" title="Orinoco">
+            Orinoco - vente en ligne
+        </a>
+            <h2>PANIER</h2>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        <div class="container">
+            <div class="mentions">
+                <a href="#">Mentions légales</a>
+            </div>
+            <div class="conditions">
+                <a href="#">Conditions générales</a>
+            </div>
+            <div class="contact">
+                <a href="#">Contact</a>
+            </div>
+        </div>
+    </footer>
  
     <script src="main.js"></script>  
     <script src="panier.js"></script>
