--- a/produit.html
+++ b/produit.html
@@ -12,11 +12,27 @@
 </head>
 <body>
     <header>
-
+        <a href="index.html" title="Orinoco">
+            <h1>Orinoco - vente en ligne</h1>
+        </a>
+            <h2>PRODUITS</h2>
     </header>
     <main>
         
     </main>
+    <footer>
+        <div class="container">
+            <div class="mentions">
+                <a href="#">Mentions légales</a>
+            </div>
+            <div class="conditions">
+                <a href="#">Conditions générales</a>
+            </div>
+            <div class="contact">
+                <a href="#">Contact</a>
+            </div>
+        </div>
+    </footer>
     <script src="main.js"></script>  
     <script src="produit.js"></script>
 </body>
