modification fichier html et css

--- a/produit.html
+++ b/produit.html
@@ -21,19 +21,25 @@
         
     </main>
     <footer>
-        <div class="container">
-            <div class="mentions">
-                <a href="#">Mentions légales</a>
-            </div>
-            <div class="conditions">
-                <a href="#">Conditions générales</a>
-            </div>
-            <div class="contact">
-                <a href="#">Contact</a>
-            </div>
+        <div id="footer">
+                <div class="mentions">
+                    <h2>
+                        <a href="page mention légale" title="Mentions légales" target="_blank">
+                            Mentions légales
+                        </a>
+                    </h2>
+                </div>
+                <div class="contact">
+                    <h2>
+                        <a href="mailto:contact@orinoco.com" title="Contactez-nous !">
+                            Contactez-nous
+                        </a>
+                    </h2>
+                </div>
         </div>
     </footer>
-    <script src="main.js"></script>  
-    <script src="produit.js"></script>
-</body>
-</html>
+    
+        <div id="content"></div>  
+        <script src="index.js"></script>
+    </body>
+    </html>
