--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
 </head>
 <body>
 <header>
-       
-    <div class="container">
-        <a class="navbar-brand" href="index.html"><i class="fas-fa-shopping-cart"></i>Orinoco</a>
+    <div class="header_record">
+        <a class="navbar-brand" href="index.html">
+            <i class="fas fa-shopping-cart"></i>Orinoco
+        </a>
+
+    <div class="purshasing">
+        <a class="nav-link text decoration-none" href="confirmation.html">Commande
+        </a>
+        <a class="nav-link text decoration-none" href="panier.html">panier</a>
+        </div>
     </div>
 </header>
 <main>
@@ -43,16 +50,21 @@
 
 </main>
 <footer>
-    <div class="container">
-        <div class="mentions">
-            <a href="#">Mentions légales</a>
-        </div>
-        <div class="conditions">
-            <a href="#">Conditions générales</a>
-        </div>
-        <div class="contact">
-            <a href="#">Contact</a>
-        </div>
+    <div id="footer">
+            <div class="mentions">
+                <h2>
+                    <a href="page mention légale" title="Mentions légales" target="_blank">
+                        Mentions légales
+                    </a>
+                </h2>
+            </div>
+            <div class="contact">
+                <h2>
+                    <a href="mailto:contact@orinoco.com" title="Contactez-nous !">
+                        Contactez-nous
+                    </a>
+                </h2>
+            </div>
     </div>
 </footer>
 
