--- a/confirmation.html
+++ b/confirmation.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <a href="index.html" title="Orinoco">
+            <img src="images/logo.png" alt="" width="100" height="80">
             <h1>Orinoco - vente en ligne</h1>
             </a>
                 <h2>confirmation - achats</h2>
