--- a/index.html
+++ b/index.html
@@ -5,29 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
      
     <link href="./src/css/style.css" rel="stylesheet">
-
+<title>Orinoco - Caméras Vintage</title>
     <meta name="description" content="Vente de caméras vintage.">
-    <title>Orinoco - vente en ligne</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--header-->
 <header>
-    <div class="header_record">
-        <a class="navbar-brand" href="index.html">
-            <i class="fas fa-shopping-cart"></i>Orinoco
-        </a>
-
-    <div class="purshasing">
-        <a class="nav-link text decoration-none" href="confirmation.html">Commande
-        </a>
-        <a class="nav-link text decoration-none" href="panier.html">panier</a>
-        </div>
+    <div class="container_record">
+        <nav class="col navbar navbar-expand d-flex justify-content-around">
+            <a class="navbar-brand" href="index.html">
+                <img src="images/logo.png" alt="" width="100" height="80">
+                <i class="fas fa-shopping-cart"></i>Orinoco
+            </a>
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Commande</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="panier.html">panier(<span id="NombreArticle"></span>)
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </div>
 </header>
+<!--Main-->
 <main>
     <div class="container">
-        <h2>caméras vintage</h2>
-            <div class="liste">
+        <div class="" style="background-image: url(./images/lentille.jpg);">
+            <h1>Bienvenu sur Orinoco !</h1>
+        </div>
+            <div id="Produits">
+            </div>
+    </div>
                 <ul>
                     <li>   
                         <a href="http://localhost:3000/images/vcam_1.jpg">vcam_1</a>
@@ -67,8 +78,13 @@
             </div>
     </div>
 </footer>
-
+<!--SCRIPT-->
+    <script src="./fonctions.js"></script>
     <div id="content"></div>  
     <script src="index.js"></script>
+<!--BOOTSTRAP-->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
 </body>
 </html>
