--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-     
-    <link href="./src/css/style.css" rel="stylesheet">
+    <meta name="robots" content="index, follow">
+    <link href="style.css" rel="stylesheet">
 <title>Orinoco - Caméras Vintage</title>
     <meta name="description" content="Vente de caméras vintage.">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/html" href="assets/css/style.css">
+    <link rel="stylsheet" type="text/css" href="assets/css/reset.css">
 </head>
-<body>
+<body id="page_accueil">
     <!--header-->
-<header>
-    <div class="container_record">
+<header class="container_record">
         <nav class="col navbar navbar-expand d-flex justify-content-around">
             <a class="navbar-brand" href="index.html">
                 <img src="images/logo.png" alt="" width="100" height="80">
@@ -28,63 +28,38 @@
                 </li>
             </ul>
         </nav>
-    </div>
 </header>
 <!--Main-->
 <main>
     <div class="container">
-        <div class="" style="background-image: url(./images/lentille.jpg);">
-            <h1>Bienvenu sur Orinoco !</h1>
+        <div class="col-md-12 text-center">
+            <h2>cameras vintage</h2>
         </div>
-            <div id="Produits">
+            <div class="col-md-12 text-center" id="liste_article">
             </div>
-    </div>
-                <ul>
-                    <li>   
-                        <a href="http://localhost:3000/images/vcam_1.jpg">vcam_1</a>
-                    </li>
-                    <li>
-                        <a href="http://localhost:3000/images/vcam_2.jpg">vcam_2</a>
-                    </li>
-                    <li>
-                        <a href="http://localhost:3000/images/vcam_3.jpg">vcam_3</a>
-                    </li>
-                    <li>
-                        <a href="http://localhost:3000/images/vcam_4.jpg">vcam_4</a>
-                    </li>
-                    <li>
-                        <a href="http://localhost:3000/images/vcam_5.jpg">vcam_5</a>
-                    </li>
-                </ul>
-            </div>
-    </div>
-
 </main>
 <footer>
     <div id="footer">
-            <div class="mentions">
-                <h2>
-                    <a href="page mention légale" title="Mentions légales" target="_blank">
-                        Mentions légales
-                    </a>
-                </h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 text-center">
+                    <a href="#">Mentions légales</a>
+                </div>
             </div>
-            <div class="contact">
-                <h2>
-                    <a href="mailto:contact@orinoco.com" title="Contactez-nous !">
-                        Contactez-nous
-                    </a>
-                </h2>
+            <div class="col-md-4 text-center">
+                    <a href="#">contact</a>
             </div>
+        </div>
     </div>
 </footer>
 <!--SCRIPT-->
-    <script src="./fonctions.js"></script>
-    <div id="content"></div>  
-    <script src="index.js"></script>
+    <script src="./produit.js"></script>
+    <script src="./app.js"></script>
+    <script src="./liste.js"></script>
+    <div id="content"></div>
+
+
 <!--BOOTSTRAP-->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
 </body>
 </html>
