ajout bouton mes achats dans page index.html

--- a/front/index.html
+++ b/front/index.html
@@ -28,6 +28,9 @@
                             <li>
                                 <a href="panier.html">Panier</a>
                             </li>
+                            <li>
+                                <a href="confirmation.html">Mes achats</a>
+                            </li>
                         </ul>
                     </div>
                 </nav>   
