creation de la page panier.js et ajout texte

--- a/front/confirmation.html
+++ b/front/confirmation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -31,8 +31,8 @@
                 </div>
             </nav>   
     </header>
-    <main class="contenu-confirmation">
-        <div id="resultatOrder"></div>
+    <main class="confirmation">
+        <div id="finalisation"></div>
         
     </main>
     <footer>
