--- a/front/index.html
+++ b/front/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -15,12 +15,11 @@
 
 <body>
     <h1>Caméras vintage</h1>
-    <div class="container">
     <!--header-->
     <header>
-            <div id="logo">
-                <img class="imageLogo" src="/images/Logo-orinoco.png.png" alt="logo">
-            </div>
+            <a href="index.html">
+                <img src="images/Logo-orinoco.png" alt="Logo" width="100" height="60" >
+            </a>
                 <nav class="navbar row">
                     <div class="navbar">
                         <ul class="navbar-nav">
