--- a/front/produit.html
+++ b/front/produit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
   <header>
     <h1>Orinoco</h1>
         <div id="logo">
-            <img class="imageLogo" src="/imagesLlogo.png.png" alt="logo">
+            <img class="imageLogo" src="/images/Logo-orinoco.png" alt="logo" width="100" height="60">
         </div>
             <nav class="navbar row">
                 <div class="navbar">
@@ -38,19 +38,20 @@
     <main class="contenu-produit">
         <h2>Description produit</h2></main></br></br>
             <div id="description"></div>
-            <div class="choixObjectifs">
+            <div class="lensesChoice">
                 <h3>Options</h3>
-                <label for="choix-objectifs">Choisissez un objectif</label>
-                    <select name="lentille" id="choix-objectifs">
+                <label for="choix-objectifs">Choisissez un objectif</label></br>
+                    <select name="lense" id="choix-objectifs">
                         <option>Choisissez votre objectif</option>
                     </select>
-            </div>
+            </div></br>
+            <div class="boutonPanier">
+                <button type="button" id="boutonAjouter">Ajouter au panier</button> 
+             </div>
     </main>
     
     <footer>
-        <div class="boutonPanier">
-           <button type="button" id="boutonAjouter">Ajouter au panier</button> 
-        </div>
+        
     </footer>
     </div>
         <script src="./produit.js"></script>
