--- a/front/panier.html
+++ b/front/panier.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
     <head>
         <meta charset="UTF-8">
@@ -18,7 +18,7 @@
             <header>
                 <h1>Produits Orinoco</h1>
                 <div id="logo">
-                    <img class="imageLogo" src="/images/logo.png" alt="logo">
+                    <img class="imageLogo" src="/images/Logo-orinoco.png" alt="logo">
                 </div>
                 <nav class="navbar row">
                     <div class="navbar">
@@ -34,7 +34,9 @@
         <main class="contenu-panier">
 
             <h2>Votre panier</h2>
-                <div id="formulaire"></div>  
+                <div id="formulaire"></div> 
+                <div id="contenu-donnees"></div>
+                <div id="prix-total"></div> 
 
         </main>
             <footer>
