--- a/front/index.html
+++ b/front/index.html
@@ -18,7 +18,7 @@
     <!--header-->
     <header>
             <a href="index.html">
-                <img src="images/Logo-orinoco.png" alt="Logo" width="100" height="60" >
+                <img src="img/Logo-orinoco.png" alt="Logo Orinoco" width="100" height="60">
             </a>
                 <nav class="navbar row">
                     <div class="navbar">
