--- a/front/panier.html
+++ b/front/panier.html
@@ -14,11 +14,13 @@
     </head>
 
     <body>
+
+        
         <div class="container container-panier">
             <header>
                 <h1>Produits Orinoco</h1>
                 <div id="logo">
-                    <img class="imageLogo" src="/images/Logo-orinoco.png" alt="logo">
+                    <img class="imageLogo" src="/images/logo.png" alt="logo">
                 </div>
                 <nav class="navbar row">
                     <div class="navbar">
@@ -26,18 +28,19 @@
                             <li>
                                 <a href="index.html">Accueil</a>
                             </li>
+                            <li>
+                                <a href="confirmation.html">MES ACHATS</a>
+                            </li>
                         </ul>
                     </div>
                 </nav> 
             </header>
         <!--Main-->
         <main class="contenu-panier">
-
-            <h2>Votre panier</h2>
-                <div id="formulaire"></div> 
+            <h2>Votre panier</h2>   
                 <div id="contenu-donnees"></div>
-                <div id="prix-total"></div> 
-
+                <div id="prix-total"></div>
+                <div id="formulaire"></div>  
         </main>
             <footer>
             
