modification fichier js

--- a/front/panier.html
+++ b/front/panier.html
@@ -14,9 +14,7 @@
     </head>
 
     <body>
-
-        
-        <div class="container container-panier">
+        <div class="container basket-container">
             <header>
                 <h1>Produits Orinoco</h1>
                 <div id="logo">
@@ -36,7 +34,7 @@
                 </nav> 
             </header>
         <!--Main-->
-        <main class="contenu-panier">
+        <main class="basket-content">
             <h2>Votre panier</h2>   
                 <div id="contenu-donnees"></div>
                 <div id="prix-total"></div>
