--- a/front/produit.html
+++ b/front/produit.html
@@ -35,7 +35,7 @@
                 </nav>   
     </header>
         <!--Main-->
-    <main class="contenu-produit">
+    <main class="product-content">
         <h2>Description produit</h2></main></br></br>
             <div id="description"></div>
                 <div class="lensesChoice">
