changements mineurs fichier html

--- a/front/index.html
+++ b/front/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <title>Orinoco - Caméras Vintage</title>
     <meta name="description" content="Orinoco commerce en ligne de caméras vintage">
     <meta name="robots" content="index, follow">
     <link href="style.css" rel="stylesheet">
     <meta name="description" content="Vente de caméras vintage.">
     <link rel="stylesheet" type="text/html" href="assets/css/style.css">
     <link rel="stylsheet" type="text/css" href="assets/css/reset.css">
-    <title>Orinoco - Caméras Vintage</title>
 </head>
 
 <body>
@@ -25,7 +25,10 @@
                         <ul class="navbar-nav">
                            
                             <li>
-                                <a href="panier.html">Panier</a>
+                                <a href="panier.html">Panier
+                                    <i class="fas fa-shopping-cart"></i>
+                                    <div id="red-dot"><span id="nbre-item"></span></div>
+                                </a>
                             </li>
                             <li>
                                 <a href="confirmation.html">Mes achats</a>
@@ -41,5 +44,9 @@
     </main>
     </div>
     <script src="./index.js"></script>
+    <footer>
+        <p> Orinoco 2020</p>
+    </footer>
+
 </body>
 </html>
