--- a/front/panier.html
+++ b/front/panier.html
@@ -4,19 +4,20 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+        <title>Orinoco - Caméras Vintage</title>
         <meta name="description" content="Orinoco commerce en ligne de caméras vintage">
         <meta name="robots" content="index, follow">
         <link href="style.css" rel="stylesheet">
         <meta name="description" content="Vente de caméras vintage.">
         <link rel="stylesheet" type="text/html" href="assets/css/style.css">
         <link rel="stylsheet" type="text/css" href="assets/css/reset.css">
-        <title>Panier</title>
     </head>
 
     <body>
         <div class="container basket-container">
+   
             <header>
-                <h1>Produits Orinoco</h1>
+               
                 <div id="logo">
                     <img class="imageLogo" src="/images/logo.png" alt="logo">
                 </div>
@@ -24,7 +25,8 @@
                     <div class="navbar">
                         <ul class="navbar-nav">                        
                             <li>
-                                <a href="index.html">Accueil</a>
+                                <a href="index.html">Accueil
+                                </a>
                             </li>
                             <li>
                                 <a href="confirmation.html">MES ACHATS</a>
@@ -35,15 +37,14 @@
             </header>
         <!--Main-->
         <main class="basket-content">
-            <h2>Votre panier</h2>   
+            <h1>Votre panier</h1>   
                 <div id="contenu-donnees"></div>
                 <div id="prix-total"></div>
                 <div id="formulaire"></div>  
         </main>
-            <footer>
-            
-            </footer>
-        </div>
-                <script src="./panier.js"></script>
+        <footer>
+            <p> Orinoco 2020</p>
+        </footer>
+                <script src="./panier.js"></script>       
     </body>
 </html>
