amélioration page produit.js

--- a/front/index.html
+++ b/front/index.html
@@ -18,7 +18,10 @@
     <!--header-->
     <header>
             <a href="index.html">
-                <img src="img/Logo-orinoco.png" alt="Logo Orinoco" width="100" height="60">
+                <div id="logo">
+                    <img class="imageLogo" src="/images/logo.png" alt="logo">
+                </div>
+                
             </a>
                 <nav class="navbar row">
                     <div class="navbar">
