--- a/front/produit.html
+++ b/front/produit.html
@@ -38,6 +38,9 @@
         <!--Main-->
     <main class="product-content">
         <h1>Description produit</h1></main></br></br>
+            <section class="go-to-cart hidden">
+                <a href="./panier.html">Votre panier</a>
+            </section>
             <div id="description"></div>
                 <div class="lensesChoice">
                     <h3>Options</h3>
