insertion logo orinoco

--- a/front/index.html
+++ b/front/index.html
@@ -14,24 +14,20 @@
 </head>
 
 <body>
-    <h1>Caméras vintage</h1>
+    <h1>CAMERAS VINTAGE</h1>
     <!--header-->
     <header>
         <a href="index.html">
-            <div id="logo">
-                <img class="imageLogo" src="/images/logo.png" alt="logo">
-            </div>
-
+            <img class="navbar-img" src="img/logo.png" alt="logo">
         </a>
+
+
         <nav class="navbar row">
             <div class="navbar">
                 <ul class="navbar-nav">
 
                     <li>
-                        <a href="panier.html">Panier
-                            <i class="fas fa-shopping-cart"></i>
-                            <div id="red-dot"><span id="nbre-item"></span></div>
-                        </a>
+                        <a href="panier.html">Panier</a>
                     </li>
                     <li>
                         <a href="confirmation.html">Mes achats</a>
