--- a/front/produit.html
+++ b/front/produit.html
@@ -20,9 +20,9 @@
         <!--header-->
         <header>
 
-            <div id="logo">
-                <img class="imageLogo" src="/images/logo.png" alt="logo" width="100" height="60">
-            </div>
+            <a href="index.html">
+                <img class="navbar-img" src="img/logo.png" alt="logo">
+            </a>
             <nav class="navbar row">
                 <div class="navbar">
                     <ul class="navbar-nav">
