--- a/front/confirmation.html
+++ b/front/confirmation.html
@@ -17,9 +17,9 @@
 <body>
     <header>
 
-        <div id="logo">
-            <img class="imageLogo" src="/images/logo.png" alt="logo">
-        </div>
+        <a href="index.html">
+            <img class="navbar-img" src="img/logo.png" alt="logo">
+        </a>
         <nav class="navbar row">
             <div class="navbar">
                 <ul class="navbar-nav">
