amélioration fichier css

--- a/front/confirmation.html
+++ b/front/confirmation.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <h1>CAMERAS VINTAGE</h1>
     <header>
         <a href="index.html">
             <img class="navbar-img" src="img/logo.png" alt="logo">
@@ -33,9 +34,9 @@
         </nav>
     </header>
     <main class="contenu-confirmation">
-        <h1>confirmation</h1>
+        <h2>confirmation</h2>
         <div id="resultatOrder"></div>
-        <h2>A bientôt chez Orinoco !</h2>
+        <h3>A bientôt chez Orinoco !</h3>
         </div>
     </main>
     <footer>
