--- a/front/produit.html
+++ b/front/produit.html
@@ -11,10 +11,12 @@
     <meta name="description" content="Vente de caméras vintage.">
     <link rel="stylesheet" type="text/html" href="assets/css/style.css">
     <link rel="stylsheet" type="text/css" href="assets/css/reset.css">
+
 </head>
 
 <body>
-    <div class="container basket-container">
+    <h1>CAMERAS VINTAGE</h1>
+    <div class="container">
         <header>
             <a href="index.html">
                 <img class="navbar-img" src="img/logo.png" alt="logo">
@@ -23,27 +25,38 @@
                 <div class="navbar">
                     <ul class="navbar-nav">
                         <li>
-                            <a href="index.html">Accueil
-                            </a>
+                            <a href="index.html">Accueil</a>
                         </li>
                         <li>
-                            <a href="confirmation.html">MES ACHATS</a>
+                            <a href="panier.html">Panier</a>
                         </li>
                     </ul>
                 </div>
             </nav>
         </header>
-        <!--Main-->
-        <main class="basket-content">
-            <h1>Votre panier</h1>
-            <div id="contenu-donnees"></div>
-            <div id="prix-total"></div>
-            <div id="formulaire"></div>
+        <main class="product-content">
+            <h2>Description produit</h2>
+        </main></br></br>
+        <section class="go-to-cart hidden">
+            <a href="./panier.html">Votre panier</a>
+        </section>
+        <div id="description"></div>
+        <div class="lensesChoice">
+            <h3>Options</h3>
+            <label for="choix-objectifs">Choisissez un objectif</label></br>
+            <select name="lense" id="choix-objectifs">
+                <option>Choisissez votre objectif</option>
+            </select>
+        </div></br>
+        <div class="boutonPanier">
+            <button type="button" id="boutonAjouter">Ajouter au panier</button>
+        </div>
         </main>
         <footer>
             <p> Orinoco 2020</p>
         </footer>
-        <script src="./panier.js"></script>
+    </div>
+    <script src="./produit.js"></script>
 </body>
 
 </html>
